--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <base target="_top">
@@ -6,14 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Memo App</title>
     <style>
+      @import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600;700&family=Zen+Maru+Gothic:wght@400;500;700&display=swap");
+
       :root {
-        --bg: #f4f2ed;
+        --bg: #fff5fb;
         --panel: #ffffff;
-        --ink: #1b1a16;
-        --muted: #6c645b;
-        --accent: #d26a1e;
-        --accent-dark: #a54e12;
-        --shadow: rgba(0, 0, 0, 0.08);
+        --ink: #1e1a33;
+        --muted: #5f5b78;
+        --accent: #ff5fa2;
+        --accent-dark: #ff2f8b;
+        --accent-alt: #4cd7d0;
+        --accent-warm: #ffd166;
+        --shadow: rgba(28, 21, 58, 0.18);
+        --stroke: #1e1a33;
       }
 
       * {
@@ -26,24 +31,58 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        background: linear-gradient(135deg, #f4f2ed 0%, #efe6da 55%, #f0e3d3 100%);
+        background:
+          radial-gradient(circle at 12% 18%, rgba(255, 255, 255, 0.75) 0 12%, transparent 13% 100%),
+          radial-gradient(circle at 88% 10%, rgba(255, 255, 255, 0.65) 0 10%, transparent 11% 100%),
+          radial-gradient(circle at 80% 85%, rgba(255, 255, 255, 0.6) 0 12%, transparent 13% 100%),
+          linear-gradient(135deg, #ffb6d1 0%, #ffe29a 38%, #c2ffd8 70%, #a0c4ff 100%);
         color: var(--ink);
-        font-family: "Georgia", "Times New Roman", serif;
+        font-family: "Zen Maru Gothic", "Fredoka", "Trebuchet MS", sans-serif;
       }
 
       .container {
         width: min(760px, 92vw);
         background: var(--panel);
-        border-radius: 18px;
+        border-radius: 24px;
         padding: 28px;
-        border: 1px solid #efe6da;
-        box-shadow: 0 18px 42px var(--shadow);
+        border: 3px solid var(--stroke);
+        position: relative;
+        box-shadow: 10px 10px 0 rgba(30, 26, 51, 0.9), 0 24px 48px var(--shadow);
+        overflow: hidden;
+        animation: floatIn 0.6s ease;
+      }
+
+      .container::before {
+        content: "";
+        position: absolute;
+        top: -28px;
+        right: -24px;
+        width: 120px;
+        height: 120px;
+        border-radius: 30px;
+        background: linear-gradient(140deg, rgba(255, 95, 162, 0.35), rgba(76, 215, 208, 0.45));
+        transform: rotate(12deg);
+      }
+
+      .container::after {
+        content: "";
+        position: absolute;
+        bottom: -32px;
+        left: -16px;
+        width: 120px;
+        height: 120px;
+        border-radius: 50%;
+        background: radial-gradient(circle, rgba(255, 209, 102, 0.55) 0 50%, transparent 60% 100%);
       }
 
       h1 {
         margin: 0 0 6px;
-        font-size: 30px;
-        letter-spacing: 0.4px;
+        font-size: clamp(26px, 4vw, 34px);
+        letter-spacing: 0.8px;
+        display: inline-block;
+        padding: 4px 12px;
+        background: linear-gradient(90deg, rgba(255, 95, 162, 0.25), rgba(255, 209, 102, 0.4));
+        border-radius: 999px;
       }
 
       p {
@@ -55,23 +94,29 @@
         display: grid;
         gap: 12px;
         margin-bottom: 18px;
+        padding: 16px;
+        border-radius: 18px;
+        border: 2px dashed rgba(30, 26, 51, 0.25);
+        background: rgba(255, 255, 255, 0.75);
       }
 
       textarea {
         width: 100%;
         min-height: 140px;
-        border-radius: 12px;
-        border: 1px solid #e2d7c8;
-        padding: 14px;
+        border-radius: 16px;
+        border: 2px solid var(--stroke);
+        padding: 14px 16px;
         font-size: 16px;
-        font-family: "Trebuchet MS", "Segoe UI", sans-serif;
+        font-family: "Zen Maru Gothic", "Fredoka", "Trebuchet MS", sans-serif;
         resize: vertical;
-        background: #fffdf9;
+        background: #ffffff;
+        box-shadow: 4px 4px 0 rgba(30, 26, 51, 0.4);
       }
 
       textarea:focus {
-        outline: 2px solid rgba(210, 106, 30, 0.25);
-        border-color: rgba(210, 106, 30, 0.4);
+        outline: none;
+        border-color: var(--accent);
+        box-shadow: 0 0 0 3px rgba(255, 95, 162, 0.3);
       }
 
       .actions {
@@ -84,26 +129,46 @@
       button {
         border: none;
         border-radius: 999px;
-        background: var(--accent);
+        background: linear-gradient(120deg, var(--accent), #ff8ac6 55%, #ffc857);
         color: #fff;
-        padding: 10px 24px;
+        padding: 12px 26px;
         font-size: 15px;
         cursor: pointer;
-        transition: transform 0.15s ease, background 0.15s ease;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 4px 4px 0 rgba(30, 26, 51, 0.8);
+        transition: transform 0.15s ease, box-shadow 0.15s ease;
       }
 
       button:hover {
-        background: var(--accent-dark);
-        transform: translateY(-1px);
+        transform: translateY(-2px) rotate(-1deg);
+        box-shadow: 6px 6px 0 rgba(30, 26, 51, 0.9);
+      }
+
+      button:disabled {
+        cursor: not-allowed;
+        box-shadow: none;
+        transform: none;
+        opacity: 0.7;
       }
 
       .status {
         font-size: 14px;
         color: var(--muted);
+        background: #fff;
+        padding: 6px 12px;
+        border-radius: 999px;
+        border: 2px solid rgba(30, 26, 51, 0.2);
+      }
+
+      .status:empty {
+        display: none;
       }
 
       .status.error {
         color: #b12424;
+        border-color: rgba(177, 36, 36, 0.4);
       }
 
       .memo-list {
@@ -113,11 +178,24 @@
       }
 
       .memo-card {
-        padding: 14px 16px;
-        border-radius: 12px;
-        border: 1px solid #f0e3d3;
-        background: #fffaf3;
-        box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.6);
+        padding: 16px 18px;
+        border-radius: 16px;
+        border: 2px solid var(--stroke);
+        background: #fff;
+        box-shadow: 6px 6px 0 rgba(30, 26, 51, 0.75);
+        animation: cardPop 0.35s ease;
+      }
+
+      .memo-card:nth-child(3n + 1) {
+        background: #fff1f8;
+      }
+
+      .memo-card:nth-child(3n + 2) {
+        background: #f0fffb;
+      }
+
+      .memo-card:nth-child(3n + 3) {
+        background: #fff8e6;
       }
 
       .memo-date {
@@ -126,14 +204,58 @@
         letter-spacing: 0.8px;
         color: var(--muted);
         margin-bottom: 6px;
+        display: inline-flex;
+        padding: 4px 10px;
+        border-radius: 999px;
+        border: 2px solid rgba(30, 26, 51, 0.2);
+        background: rgba(255, 255, 255, 0.7);
       }
 
       .empty {
         padding: 18px;
         text-align: center;
         color: var(--muted);
-        border: 1px dashed #eadfce;
-        border-radius: 12px;
+        border: 2px dashed rgba(30, 26, 51, 0.3);
+        border-radius: 16px;
+        background: rgba(255, 255, 255, 0.7);
+      }
+
+      @keyframes floatIn {
+        from {
+          opacity: 0;
+          transform: translateY(12px) scale(0.98);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0) scale(1);
+        }
+      }
+
+      @keyframes cardPop {
+        from {
+          opacity: 0;
+          transform: translateY(8px) scale(0.98);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0) scale(1);
+        }
+      }
+
+      @media (max-width: 600px) {
+        .container {
+          padding: 20px;
+          border-radius: 20px;
+        }
+
+        .input-block {
+          padding: 12px;
+        }
+
+        button {
+          width: 100%;
+          justify-content: center;
+        }
       }
     </style>
   </head>
@@ -224,3 +346,5 @@
     </script>
   </body>
 </html>
+
+
